--- a/VRChat/59/1374159.html
+++ b/VRChat/59/1374159.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/34d02bac3ae4f808674f.js" defer=
+    "https://asset.booth.pm/assets/d0b74dab23351869d989.js" defer=
     "defer" nonce=
-    "bALt8MBaoT/dxyEGH3tcb3HAfE8Pb9U8ucUkS1R7SNM="></script>
+    "G/URZArqEen3dJK4QerYas+u110GLArIymXCDyq+MFY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"きもの風 白エプロン【VRoid用テクスチャ】","description":"「VRoidStudio」用『きもの風 白エプロン』のテクスチャのセットです。\nズボンで作っています\n足を揃えて立つと着物に見えます。\n\n髪飾りは付いていません。\n商品画像のモデルデータは含みません。\n\n●セット内容\n・着物とエプロン(ワンピース)\n・着物(ズボン)\n・草履(ワンピースの靴)\n・草履用の肌\n・説明書\n\n※草履と草履用の肌は、どの柄にも同じものが入っています。\n\n●利用規約\n\n◆OK◆\n・動画や配信、本データを使用しているモデルのグッズ製作・販売などの商用利用\n・動画やライブ配信、VRChat 、twitter、ゲーム内での利用\n・データ改変（改変データの配布や販売は禁止です）\n\n◆NG◆\n・改変の有無を問わず再配布、販売禁止\n・改変の有無を問わず本データを利用したモデルの配布や販売禁止\n・政治的、宗教的、反社会的、暴力的、性的なコンテンツへの利用\n\n◆クレジット表記◆\n・不要\n\n●注意事項\n・VRoid Hubへのアップロードは可能ですが、モデルのダウンロードができないように設定して下さい。\n・VRoid Studioはv0.6.4以降のものをお使い下さい。\n・書作権は放棄していません。\n\n●免責事項\n・本データ使用によるトラブルや損失、損害等には一切責任を負いません。\n・予告なくデータのアップデート、差し替え、販売停止、価格改定など変更する場合があります。\n\n●お問い合わせ\nTwitter\nhttps://twitter.com/emoco_art\n","url":"https://booth.pm/ja/items/1374159","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"500","highPrice":"2000"},"image":"https://booth.pximg.net/c/620x620/f842b46a-0bce-479b-a6b4-31042512e606/i/1374159/1d56faae-31d9-476b-ba25-17baefafdff2_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="bALt8MBaoT/dxyEGH3tcb3HAfE8Pb9U8ucUkS1R7SNM="></script>
+    nonce="G/URZArqEen3dJK4QerYas+u110GLArIymXCDyq+MFY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -1017,7 +1017,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;}]"
+    "[{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
