--- a/VRChat/68/1375368.html
+++ b/VRChat/68/1375368.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/34d02bac3ae4f808674f.js" defer=
+    "https://asset.booth.pm/assets/d0b74dab23351869d989.js" defer=
     "defer" nonce=
-    "VKWqpnDpVx7tYjkWpLH5X835dFbn3JOVBR8dG9MiZXQ="></script>
+    "SmMYpNkldY1N7TUrsOz0LAWU+vP7/sPfGJNTQTMAu7w="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ステルスシェーダー","description":"透過シェーダーです。（本物） VRChatToonShaderを元に、ステルスシェーダーに改変したものです。また、当シェーダーはログインアニメーションとしても使えます。\n※ただし、ログインアニメーションはおまけなので設定は各自でお願いします\n\n当シェーダーの使用動画\nhttps://twitter.com/reimhak/status/1129381634640211970?s=20\n※使用モデルである「ミーシェ」は付属されません\n\n同封物：UnityPackage[Stealth.shader/Reimhak's Shader_Stealth.mat/Body.controller/LoginAnimation.anim]\n・ReadMe.txt\n\n～プロパティ項目と注意点～\n・Texture\n・StealthHeight\n・ToonHeight\t※StealthHeightの値までしか表示されません。\n・Tint Color\n・Rim Color\n・ズレの間隔\n・ズレの高さ\n・線の間隔\n・元の明るさ\t※0にしても透明にはなりません、その場合alphaを変更してください。\n・線の明るさ\n・alpha\n\nログインアニメーションの設定方法\n・該当オブジェクトに同封されている[Body.controller]を付与してください。\n　自動的にAnimatorコンポーネントが付与され、オブジェクトアクティブ時に自動再生されます。\n\n　また、まばたきアニメーションが付与されている場合はそこに置き換えるか、または新規オブジェクトを作成し、\n　階層化に該当オブジェクトを移動後、作成したオブジェクトに付与してください。\n　その場合、当アニメーションやアニメーションオーバーライド（表情）のパスが変わるため、修正が必要となります。\n\n\n【禁止事項】\n・二次配布などの再配布\n・自作発言\n\n\nコード閲覧はえっちな人に限ります。不具合等ありましたらReimhakまで連絡お願いします。\n・Created by Reimhak\n\n【連絡先】\n・ Twitter\t@Reimhak\n・ Discord\tReimhak#7170\n\n更新履歴\n2019/05/17\tv1\t//booth販売","url":"https://booth.pm/ja/items/1375368","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/4c101899-020e-4d99-95fc-2bc4ae850b34/i/1375368/6e7ac53a-3eeb-45dd-8c0d-f3d84c81b50d_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="VKWqpnDpVx7tYjkWpLH5X835dFbn3JOVBR8dG9MiZXQ="></script>
+    nonce="SmMYpNkldY1N7TUrsOz0LAWU+vP7/sPfGJNTQTMAu7w="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -602,7 +602,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;}]"
+    "[{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
